--- a/platformio.ini
+++ b/platformio.ini
@@ -13,10 +13,7 @@ platform = espressif8266
 board = d1_mini_lite
 framework = arduino
 monitor_filters = esp8266_exception_decoder
-; upload_protocol = espota
-; upload_port = 10.0.0.68
-upload_flags =
-    --auth=${sysenv.OTA_PASS}
+
 monitor_speed = 115200
 lib_deps =
     ; 160  ; Adafruit INA219
@@ -34,3 +31,12 @@ build_flags =
     ; -D P_BOOST=D7
     -D P_VALVE_PWR=D6
     -D P_VALVE_DIR=D7
+
+
+[env:d1_mini_lite_ota]
+extends = env:d1_mini_lite
+upload_protocol = espota
+upload_port = 10.0.0.68 ; Replace with your device's IP address or mDNS name
+upload_flags =
+    --auth=${sysenv.OTA_PASS} ; Uses environment variable for security
+
